Fixed alignment bug for time element

--- a/src/style.css
+++ b/src/style.css
@@ -58,8 +58,9 @@ a:hover {
   vertical-align: middle;
 }
 .date {
-  opacity: 0.6;
-  font-size: 15px;
+  opacity: 0.5;
+  font-size: 14px;
+  padding-left: 2px;
 }
 #viva {
   color: pink;
